@@ -135,8 +135,9 @@ class ApiLogin extends ApiBase {
 		}
 
 		if ($result['result'] != 'Success') {
-			$result['wait'] = $this->cacheBadLogin();
-			$result['details'] = "Please wait " . self::THROTTLE_TIME . " seconds before next log-in attempt";
+			$delay = $this->cacheBadLogin();
+			$result['wait'] = $delay;
+			$result['details'] = "Please wait " . $delay . " seconds before next log-in attempt";
 		}
 		// if we were allowed to try to login, memcache is fine
 
